tests/error/tensor_errors/too_few_args.err
Error: Not enough arguments (at $FILE:9:24)
  | 
7 | @guppy
8 | def main() -> int:
9 |     return (foo, foo)(42)
  |                         ^ Missing argument (expected 2, got 1)

Note: Function signature is `(int, int) -> (int, int)`

Guppy compilation failed due to 1 previous error
